# screen_stream

./: Caddyfile  Dockerfile  docker-compose.yml  pyproject.toml
app/: client.py  gpt_proxy.py  requirements_client.txt  requirements_server.txt  run_hidden.vbs  server.py
chatmock/ChatMock/: README.md
chatmock/ChatMock/chatmock/: app.py  routes_ollama.py  routes_openai.py  upstream.py
