[project]
name = "screen-stream"
version = "0.1.0"
description = "Screen stream server"
readme = "README.md"
requires-python = ">=3.14.0, <3.15"
dependencies = [
    "fastapi==0.110.0",
    "numpy==2.4.2",
    "openai==2.24.0",
    "opencv-python==4.13.0.92",
    "uvicorn==0.41.0",
    "websockets==12.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[tool.uv]
required-version = "~=0.9.2"
add-bounds = "exact"
